--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
         <version>3.0.6</version>
         <relativePath/>
     </parent>
-    <groupId>com.scacap</groupId>
-    <artifactId>broker-trading-task</artifactId>
+    <groupId>com.shooom</groupId>
+    <artifactId>broker-trading</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>broker-trading-task</name>
-    <description>broker-trading-task</description>
+    <name>broker-trading</name>
+    <description>broker-trading</description>
     <url/>
     <licenses>
         <license/>
@@ -37,6 +37,10 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
@@ -53,6 +57,18 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>2.1.214</version>
+        </dependency>
+
+        <!-- Infra dependencies -->
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>7.4</version>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus-simpleclient</artifactId>
+            <version>1.15.0</version>
         </dependency>
 
         <!-- Test dependencies -->
@@ -84,6 +100,10 @@
             <artifactId>jsonassert</artifactId>
             <version>1.5.3</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
     </dependencies>
     <build>
