Add LocalLaunch.md as a reminder how to start the app. Fix docker-compose.yaml because app name was changed.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   app:
-    image: broker-app:latest
+    image: broker-api:latest
     container_name: broker-app
     ports:
       - "8080:8080"
